updated the sample configuration files

--- a/config/speedway-sample/field/speedway-mountain/nojournal/bin/supervisord.conf
+++ b/config/speedway-sample/field/speedway-mountain/nojournal/bin/supervisord.conf
@@ -149,7 +149,16 @@ autostart=true
 stopsignal=INT
 redirect_stderr=true          
 ;stdout_logfile=/nojournal/bin/log/tciLog.txt 
-stdout_logfile_maxbytes=5MB       
+stdout_logfile_maxbytes=5MB
+
+[program: M_BsmLocator]
+command=./M_BsmLocator
+directory=/mmitss
+priority=8
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/nojournal/bin/log/BsmLocatorLog.txt 
+stdout_logfile_maxbytes=5MB  
 
 [program: M_SystemInterface]
 command=./M_SystemInterface
@@ -172,15 +181,15 @@ redirect_stderr=true
 ;stdout_logfile=/dev/fd/1        
 stdout_logfile_maxbytes=5MB
 
-[program: M_V2XDataFtpClient]
-command=./M_V2XDataFtpClient
-directory=/mmitss
-priority=11
-autostart=true
-stopsignal=INT
-redirect_stderr=true          
+;[program: M_V2XDataTransfer]
+;command=./M_V2XDataTransfer
+;directory=/mmitss
+;priority=11
+;autostart=true
+;stopsignal=INT
+;redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
-stdout_logfile_maxbytes=5MB 
+;stdout_logfile_maxbytes=5MB 
 
 [program: M_SignalCoordinationRequestGenerator]
 command=./M_SignalCoordinationRequestGenerator
