--- a/config/speedway-sample/simulation/speedway-campbell/nojournal/bin/supervisord.conf
+++ b/config/speedway-sample/simulation/speedway-campbell/nojournal/bin/supervisord.conf
@@ -133,6 +133,15 @@ redirect_stderr=true
 ;stdout_logfile=/nojournal/bin/log/tciLog.txt 
 stdout_logfile_maxbytes=5MB       
 
+[program: M_BsmLocator]
+command=./M_BsmLocator
+directory=/mmitss
+priority=8
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/nojournal/bin/log/BsmLocatorLog.txt 
+stdout_logfile_maxbytes=5MB  
+
 [program: M_SystemInterface]
 command=./M_SystemInterface
 directory=/mmitss
