solved indexposition error in plot

--- a/src/tools/time-phase-diagram/configuration.json
+++ b/src/tools/time-phase-diagram/configuration.json
@@ -1,10 +1,10 @@
 {
-    "MultipleTypesofRequest":true,
-    "NoOfRequest": 1,
-    "ETA":[35],
-    "ETA_Duration": [4],
-    "NoOfRequiredPhase": 1,
-    "RequestedPhase":[4],
+    "MultipleTypesofRequest":false,
+    "NoOfRequest": 2,
+    "ETA":[0,82],
+    "ETA_Duration": [13,20],
+    "NoOfRequiredPhase": 2,
+    "RequestedPhase":[2,2],
     "NoOfDilemmaZoneRequest": 1,
     "DilemmaZoneETA":[25],
     "DilemmaZoneETA_Duration": [4],
