updated confg files

--- a/config/simulation_server-tools/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/simulation_server-tools/nojournal/bin/mmitss-phase3-master-config.json
@@ -13,6 +13,7 @@
     "Logging" : "True",
     "SRMTimedOutTime" : 10.0,
 	"PeerDataDecoding": false,
+	"MapBsmFiltering": true,
 	"PortNumber":
 	{
 		"MessageTransceiver":
