--- a/config/vehicle-speedway-sample/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/vehicle-speedway-sample/nojournal/bin/mmitss-phase3-master-config.json
@@ -17,6 +17,7 @@
 	"ApplicationPlatform": "vehicle",
 	"CoordinationPlanCheckingTimeInterval": 300,
 	"PeerDataDecoding": false,
+	"MapBsmFiltering": true,
 	"PortNumber": {
 		"MessageTransceiver": {
 			"MessageSender": 10003,
