--- a/config/speedway-sample/simulation/speedway-cherry/nojournal/bin/supervisord.conf
+++ b/config/speedway-sample/simulation/speedway-cherry/nojournal/bin/supervisord.conf
@@ -133,8 +133,8 @@ redirect_stderr=true
 ;stdout_logfile=/nojournal/bin/log/tciLog.txt 
 stdout_logfile_maxbytes=5MB       
 
-[program: M_BsmLocator]
-command=./M_BsmLocator
+[program: M_TrajectoryAware]
+command=./M_TrajectoryAware
 directory=/mmitss
 priority=8
 autostart=true
