updated configu files with correct keys

--- a/config/speedway-sample/field/speedway-mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/speedway-sample/field/speedway-mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -17,7 +17,7 @@
 	"ApplicationPlatform": "roadside",
 	"CoordinationPlanCheckingTimeInterval": 300,
 	"PeerDataDecoding": false,
-	"MapBsmFiltering": true,
+	"OffmapBsmFiltering": true,
 	"PortNumber": {
 		"MessageTransceiver": {
 			"MessageSender": 10003,
