--- a/config/simulation_server-tools/nojournal/bin/mmitss-message-distributor-config.json
+++ b/config/simulation_server-tools/nojournal/bin/mmitss-message-distributor-config.json
@@ -52,25 +52,25 @@
         }
     ],
     "bsm_clients": {
-        "transit": [
+        "Transit": [
             {
                 "ip_address": "10.12.6.20",
                 "port": 20022
             }
         ],
-        "truck": [
+        "Truck": [
             {
                 "ip_address": "10.12.6.20",
                 "port": 20022
             }
         ],
-        "emergency": [
+        "EmergencyVehicle": [
             {
                 "ip_address": "10.12.6.20",
                 "port": 20022
             }
         ],
-        "passenger": [
+        "Passenger": [
             {
                 "ip_address": "10.12.6.20",
                 "port": 20022
