--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,7 @@ CMake*
 *.log
 *mmitss-system-performance-roadside-log-data.csv
 config/*.csv
-config/*/*/nojournal/bin/v2x-data/*
-config/*/*/nojournal/bin/log/*.txt
+config/*/*/*/nojournal/bin/v2x-data/*
+config/*/*/*/nojournal/bin/log/*.txt
+config/*/*/*/nojournal/bin/*.dat
+config/*/*/*/nojournal/bin/*.mod
