--- a/config/vehicle-speedway-sample/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/vehicle-speedway-sample/nojournal/bin/mmitss-phase3-master-config.json
@@ -17,7 +17,7 @@
 	"ApplicationPlatform": "vehicle",
 	"CoordinationPlanCheckingTimeInterval": 300,
 	"PeerDataDecoding": false,
-	"MapBsmFiltering": true,
+	"OffmapBsmFiltering": true,
 	"PortNumber": {
 		"MessageTransceiver": {
 			"MessageSender": 10003,
@@ -114,16 +114,22 @@
 		"Elevation_Meter": 506
 	},
 	"DataTransfer": {
-		"FtpServerPort": 9090,
-		"StartTime": {
-			"Hour": 18,
-			"Minute": 30
+		"server": {
+			"data_directory": "/home/ubuntu/mmitss",
+			"ip_address": "127.0.0.1",
+			"username": "username",
+			"password": "password"
 		},
-		"EndTime": {
-			"Hour": 19,
-			"Minute": 30
-		},
-		"MaxRetries": 3
+		"intersection": [
+			{
+				"name": "intersection-1",
+				"v2x-data_location": "/home/ubuntu/mmitss"
+			}
+		],
+		"StartTime_PushToServer": {
+			"hour": 0,
+			"minute": 0
+		}
 	},
 	"PriorityParameter": {
 		"EmergencyVehicleWeight": 1.0,
