fixed the crashing of trajectory aware and moved maps to the config directory

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,6 @@ CMake*
 config/*.csv
 config/*/*/*/nojournal/bin/v2x-data/*
 config/*/*/*/nojournal/bin/log/*.txt
+config/*/*/*/nojournal/bin/*.txt
 config/*/*/*/nojournal/bin/*.dat
 config/*/*/*/nojournal/bin/*.mod
