--- a/src/common/MsgTransceiver/MsgDecoder/HostBsmDecoder/Makefile
+++ b/src/common/MsgTransceiver/MsgDecoder/HostBsmDecoder/Makefile
@@ -9,7 +9,7 @@ INCLUDES    := -I$(J2735_INCL) -I$(JSONCPP_INCL) -I$(COMMON_INCL) -I$(BUILD_ROOT
 LIBS        := -L$(J2735_LIB) -L$(MMITSS_COMMON_LIB) -L$(MAPENGINE_LIB) -llocAware -ldsrc -lasn -lmmitss-common #tell the linker where to find the libraries
 
 #cpp's go here
-SRC += main.cpp  ./../TransceiverDecoder.cpp 
+SRC += host-bsm-decoder-main.cpp  ./../TransceiverDecoder.cpp 
 #the name of the executable goes here
 TARGET = M_HostBsmDecoder
 
