updated configruation files with logging and consoleoutput keys

--- a/config/speedway-sample/field/speedway-mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/speedway-sample/field/speedway-mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -10,7 +10,8 @@
 	"MessageDistributorIP": "10.12.6.20",
 	"PriorityRequestGeneratorServerIP": "10.12.6.20",
 	"VehicleType": "Transit",
-	"Logging": "True",
+	"Logging": true,
+	"ConsoleOutput": true,
 	"SRMTimedOutTime": 10.0,
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
