--- a/src/system-interface/static/json/mmitss-phase3-master-config.json
+++ b/src/system-interface/static/json/mmitss-phase3-master-config.json
@@ -10,7 +10,8 @@
 	"MessageDistributorIP": "10.12.6.20",
 	"PriorityRequestGeneratorServerIP": "10.12.6.20",
 	"VehicleType": "Transit",
-	"Logging": "True",
+	"Logging": true,
+	"ConsoleOutput": true,
 	"SRMTimedOutTime": 10.0,
 	"ScheduleExecutionBuffer": "Deprecated",
 	"SystemPerformanceTimeInterval": 300.0,
