updated the config files

--- a/config/speedway-sample/field/speedway-mountain/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/speedway-sample/field/speedway-mountain/nojournal/bin/mmitss-phase3-master-config.json
@@ -114,28 +114,23 @@
 		"Longitude_DecimalDegree": -110.95232938020776,
 		"Elevation_Meter": 715
 	},
-	"DataTransfer":
-	{
-		"server":
-		{
+	"DataTransfer": {
+		"server": {
 			"data_directory": "/home/ubuntu/mmitss",
 			"ip_address": "127.0.0.1",
 			"username": "username",
 			"password": "password"
 		},
-		"intersection": 
-		[
+		"intersection": [
 			{
 				"name": "intersection-1",
 				"v2x-data_location": "/home/ubuntu/mmitss"
 			}
 		],
-		"StartTime_PushToServer": 
-		{
-				"hour": 0,
-				"minute": 0			
+		"StartTime_PushToServer": {
+			"hour": 0,
+			"minute": 0
 		}
-		
 	},
 	"PriorityParameter": {
 		"EmergencyVehicleWeight": 1.0,
