--- a/config/speedway-sample/simulation/speedway-park/nojournal/bin/supervisord.conf
+++ b/config/speedway-sample/simulation/speedway-park/nojournal/bin/supervisord.conf
@@ -167,7 +167,7 @@ stdout_logfile_maxbytes=5MB
 command=./M_SignalCoordinationRequestGenerator
 directory=/mmitss
 priority=12
-autostart=true
+autostart=false
 redirect_stderr=true          
 ;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
 stdout_logfile_maxbytes=5MB
