--- a/config/speedway-sample/simulation/speedway-campbell/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/speedway-sample/simulation/speedway-campbell/nojournal/bin/mmitss-phase3-master-config.json
@@ -109,10 +109,10 @@
         },
 	    "PermissiveEnabled":
         {
-            "1": false,
-            "3": false,
-            "5": false,
-            "7": false
+            "1": true,
+            "3": true,
+            "5": true,
+            "7": true
         }
 	},
      "IntersectionReferencePoint":
