--- a/src/common/v2x-data-transfer/config/v2x-data-transfer-config_roadside.json
+++ b/src/common/v2x-data-transfer/config/v2x-data-transfer-config_roadside.json
@@ -1,5 +1,8 @@
 {
 	"ApplicationPlatform": "roadside",
+	"IntersectionName": "intersection-1",
+	"Logging": true,
+	"Console": true,
 	"DataTransfer":
 	{
 		"server":
