--- a/src/common/v2x-data-transfer/config/v2x-data-transfer-config_server.json
+++ b/src/common/v2x-data-transfer/config/v2x-data-transfer-config_server.json
@@ -1,5 +1,8 @@
 {
 	"ApplicationPlatform": "server",
+	"IntersectionName": "server",
+	"Logging": true,
+	"Console": true,
 	"PullFromIntersections": true,
 	"PushToCyverse": true,
 	"DataTransfer":
