--- a/config/speedway-sample/simulation/speedway-mountain/nojournal/bin/supervisord.conf
+++ b/config/speedway-sample/simulation/speedway-mountain/nojournal/bin/supervisord.conf
@@ -99,7 +99,7 @@ stdout_logfile_maxbytes=5MB
 [program: M_MapSpatBroadcaster]
 command=./M_MapSpatBroadcaster
 directory=/mmitss
-priority=4
+priority=2
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
@@ -108,7 +108,7 @@ stdout_logfile_maxbytes=5MB
 [program: M_PriorityRequestSolver]
 command=./M_PriorityRequestSolver
 directory=/mmitss
-priority=5
+priority=3
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
@@ -117,7 +117,7 @@ stdout_logfile_maxbytes=5MB
 [program: M_PriorityRequestServer]
 command=./M_PriorityRequestServer
 directory=/mmitss
-priority=6
+priority=4
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1        
@@ -126,17 +126,17 @@ stdout_logfile_maxbytes=5MB
 [program: M_TrafficControllerInterface]
 command=./M_TrafficControllerInterface
 directory=/mmitss
-priority=7
+priority=5
 autostart=true
 stopsignal=INT
 redirect_stderr=true          
 ;stdout_logfile=/nojournal/bin/log/tciLog.txt 
-stdout_logfile_maxbytes=5MB   
+stdout_logfile_maxbytes=5MB       
 
 [program: M_TrajectoryAware]
 command=./M_TrajectoryAware
 directory=/mmitss
-priority=8
+priority=6
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/nojournal/bin/log/BsmLocatorLog.txt 
@@ -145,7 +145,7 @@ stdout_logfile_maxbytes=5MB
 [program: M_SystemInterface]
 command=./M_SystemInterface
 directory=/mmitss
-priority=9
+priority=7
 autostart=true
 stopasgroup=true             ; send stop signal to the UNIX process group (default false)
 killasgroup=true             ; SIGKILL the UNIX process group (def false
@@ -156,7 +156,7 @@ stdout_logfile_maxbytes=5MB
 [program: M_V2XDataCollector]
 command=./M_V2XDataCollector
 directory=/mmitss
-priority=10
+priority=8
 autostart=true
 stopsignal=INT
 redirect_stderr=true          
@@ -166,10 +166,19 @@ stdout_logfile_maxbytes=5MB
 [program: M_SignalCoordinationRequestGenerator]
 command=./M_SignalCoordinationRequestGenerator
 directory=/mmitss
-priority=12
+priority=9
 autostart=true
 redirect_stderr=true          
 ;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
+stdout_logfile_maxbytes=5MB
+
+[program: M_TimePhaseDiagramTool]
+command=./M_TimePhaseDiagramTool
+directory=/mmitss
+priority=10
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/dev/fd/1 
 stdout_logfile_maxbytes=5MB
 
 ; The below sample eventlistener section shows all possible
