--- a/config/speedway-sample/field/speedway-mountain/bin/supervisord.conf
+++ b/config/speedway-sample/field/speedway-mountain/bin/supervisord.conf
@@ -200,6 +200,15 @@ redirect_stderr=true
 ;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
 stdout_logfile_maxbytes=5MB
 
+[program: M_TimePhaseDiagramTool]
+command=./M_TimePhaseDiagramTool
+directory=/mmitss
+priority=13
+autostart=true
+redirect_stderr=true          
+;stdout_logfile=/dev/fd/1 
+stdout_logfile_maxbytes=5MB
+
 ; The below sample eventlistener section shows all possible
 ; eventlistener subsection values, create one or more 'real'
 ; eventlistener: sections to be able to handle event notifications
