--- a/config/speedway-sample/simulation/speedway-campbell/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/speedway-sample/simulation/speedway-campbell/nojournal/bin/mmitss-phase3-master-config.json
@@ -12,6 +12,7 @@
     "VehicleType": "Transit",
 	"Logging": true,
 	"ConsoleOutput": true,
+	"PerformanceMeasurementDiagram": true,
 	"SRMTimedOutTime": 10.0,
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
@@ -54,7 +55,7 @@
 		"MapEngine": 20024,
 		"LightSirenStatusManager": 20025,
 		"PeerToPeerPriority": 20026,
-		"SystemPerformanceDataCollector": 20027
+        "TimePhaseDiagramTool": 20027
 	},
     "psid": {
 		"map": "8002",
@@ -150,6 +151,7 @@
         "TransitWeight":1.0,
         "TruckWeight":1.0,
         "DilemmaZoneRequestWeight": 20.0,
-        "CoordinationWeight":1.0
+        "CoordinationWeight":1.0,
+		"FlexibilityWeight": 0.01
     }
 }
