--- a/config/vehicle-speedway-sample/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/vehicle-speedway-sample/nojournal/bin/mmitss-phase3-master-config.json
@@ -12,6 +12,7 @@
 	"VehicleType": "Transit",
 	"Logging": true,
 	"ConsoleOutput": true,
+	"PerformanceMeasurementDiagram": false,
 	"SRMTimedOutTime": 10.0,
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
@@ -51,7 +52,8 @@
 		"TrajectoryAware_MapEngineInterface": 20023,
 		"MapEngine": 20024,
 		"LightSirenStatusManager": 20025,
-		"PeerToPeerPriority": 20026
+		"PeerToPeerPriority": 20026,
+		"TimePhaseDiagramTool": 20027
 	},
 	"psid": {
 		"map": "8002",
@@ -138,6 +140,7 @@
 		"TransitWeight": 1.0,
 		"TruckWeight": 1.0,
 		"DilemmaZoneRequestWeight": 20.0,
-		"CoordinationWeight": 1.0
+		"CoordinationWeight": 1.0,
+		"FlexibilityWeight": 0.01
 	}
 }
