updated the config files

--- a/config/speedway-sample/simulation/speedway-campbell/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/speedway-sample/simulation/speedway-campbell/nojournal/bin/mmitss-phase3-master-config.json
@@ -12,7 +12,7 @@
     "VehicleType": "Transit",
 	"Logging": true,
 	"ConsoleOutput": true,
-	"PerformanceMeasurementDiagram": true,
+	"TimePhaseDiagram": true,
 	"SRMTimedOutTime": 10.0,
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
