--- a/config/simulation_server-tools/nojournal/bin/mmitss-phase3-master-config.json
+++ b/config/simulation_server-tools/nojournal/bin/mmitss-phase3-master-config.json
@@ -12,7 +12,7 @@
 	"VehicleType": "Transit",
 	"Logging": false,
 	"ConsoleOutput": true,
-	"PerformanceMeasurementDiagram": false,
+	"TimePhaseDiagram": false,
 	"SRMTimedOutTime": 10.0,
 	"ScheduleExecutionBuffer": 1.0,
 	"SystemPerformanceTimeInterval": 300.0,
