added time-space diagram

--- a/src/tools/time-space-diagram/configuration.json
+++ b/src/tools/time-space-diagram/configuration.json
@@ -1,29 +1,34 @@
 {
-	"CoordinatedPhase1": 2,
-	"CoordinatedPhase2": 6,
-	"StartTimeOfDiagram": 1611938760,
-	"EndTimeOfDiagram": 1611939360,
+	"DeisredSignalGroup":[2,2,2,2,6],
+	"StartTimeOfDiagram": 1629498800,
+	"EndTimeOfDiagram": 1629499800,
 	"NoOfIntersection": 5,
 	"IntersectionName": [
 		"Daisy-Gavilan",
 		"Daisy-Dedication",
 		"Daisy-Meridian",
-		"Daisy-HHastings",
+		"Daisy-Hastings",
 		"Daisy-Memorial"
 	],
 	"SPaTFileDirectory": [
-		"/home/debashis/Desktop/mmitss/bin/corridors/Anthem/Daisy-Gavilan/nojournal/bin/v2x-data/daisy-gavilan_01292021_161206/daisy-gavilan_spatLog_01292021_161206.csv",
-		"/home/debashis/Desktop/mmitss/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/v2x-data/daisy-dedication_01292021_161204/daisy-dedication_spatLog_01292021_161204.csv",
-		"/home/debashis/Desktop/mmitss/bin/corridors/Anthem/Daisy-Meridian/nojournal/bin/v2x-data/daisy-meridian_01292021_161204/daisy-meridian_spatLog_01292021_161204.csv",
-		"/home/debashis/Desktop/mmitss/bin/corridors/Anthem/Daisy-Hastings/nojournal/bin/v2x-data/daisy-hastings_01292021_161206/daisy-hastings_spatLog_01292021_161206.csv",
-		"/home/debashis/Desktop/mmitss/bin/corridors/Anthem/Daisy-Memorial/nojournal/bin/v2x-data/daisy-memorial_01292021_161204/daisy-memorial_spatLog_01292021_161204.csv"
-		
-		],
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-gavilan_spatLog_08202021_000000.csv",
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-dedication_spatLog_08202021_000000.csv",
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-meridian_spatLog_08202021_000000.csv",
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-hastings_spatLog_08202021_000000.csv",
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-memorial_spatLog_08202021_000000.csv"
+	],
+	"BsmFileDirectory": [
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-gavilan_remoteBsmLog_08202021_000000.csv",
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-dedication_remoteBsmLog_08202021_000000.csv",
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-meridian_remoteBsmLog_08202021_000000.csv",
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-hastings_remoteBsmLog_08202021_000000.csv",
+		"/home/debashis/Desktop/anthem-coordination/08-20-2021/daisy-memorial_remoteBsmLog_08202021_000000.csv"
+	],
 	"IntersectionDistance": [
-		300,
-		650,
-		1450,
-		2100,
-		2800
+		600,
+		950,
+		1950,
+		2600,
+		3350
 	]
 }
