updated the config files

--- a/config/speedway-sample/field/speedway-mountain/bin/supervisord.conf
+++ b/config/speedway-sample/field/speedway-mountain/bin/supervisord.conf
@@ -148,7 +148,7 @@ priority=7
 autostart=true
 stopsignal=INT
 redirect_stderr=true          
-;stdout_logfile=/nojournal/bin/log/tciLog.txt 
+;stdout_logfile=/dev/fd/1  
 stdout_logfile_maxbytes=5MB
 
 [program: M_TrajectoryAware]
@@ -197,14 +197,14 @@ directory=/mmitss
 priority=12
 autostart=true
 redirect_stderr=true          
-;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
+;stdout_logfile=/dev/fd/1 
 stdout_logfile_maxbytes=5MB
 
 [program: M_TimePhaseDiagramTool]
 command=./M_TimePhaseDiagramTool
 directory=/mmitss
 priority=13
-autostart=true
+autostart=false
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1 
 stdout_logfile_maxbytes=5MB
