--- a/config/speedway-sample/field/speedway-mountain/bin/mmitss-phase3-master-config.json
+++ b/config/speedway-sample/field/speedway-mountain/bin/mmitss-phase3-master-config.json
@@ -56,11 +56,11 @@
         "TimePhaseDiagramTool": 20027
 	},
 	"psid": {
-		"map": "8002",
+		"map": "E0000017",
 		"spat": "8002",
-		"rsm": "8002",
-		"srm": "8002",
-		"ssm": "8002",
+		"rsm": "8003",
+		"srm": "E0000016",
+		"ssm": "E0000015",
 		"bsm": "20"
 	},
 	"msgId": {
@@ -74,20 +74,20 @@
 		"bsm": "0014"
 	},
 	"TxChannel": {
-		"map": 172,
-		"spat": 172,
-		"rsm": 172,
-		"srm": 182,
-		"ssm": 182,
-		"bsm": 172
+		"map": "SCH",
+		"spat": "SCH",
+		"rsm": "SCH",
+		"srm": "SCH",
+		"ssm": "SCH",
+		"bsm": "SCH"
 	},
 	"TxMode": {
-		"map": "CONT",
-		"spat": "CONT",
-		"rsm": "CONT",
+		"map": "ALT",
+		"spat": "ALT",
+		"rsm": "ALT",
 		"srm": "ALT",
 		"ssm": "ALT",
-		"bsm": "CONT"
+		"bsm": "ALT"
 	},
 	"SignalController": {
 		"IpAddress": "10.12.6.5",
