--- a/config/speedway-sample/simulation/speedway-cherry/nojournal/bin/supervisord.conf
+++ b/config/speedway-sample/simulation/speedway-cherry/nojournal/bin/supervisord.conf
@@ -167,7 +167,7 @@ stdout_logfile_maxbytes=5MB
 command=./M_SignalCoordinationRequestGenerator
 directory=/mmitss
 priority=9
-autostart=true
+autostart=false
 redirect_stderr=true          
 ;stdout_logfile=/nojournal/bin/log/coordinationLog.txt
 stdout_logfile_maxbytes=5MB
@@ -176,7 +176,7 @@ stdout_logfile_maxbytes=5MB
 command=./M_TimePhaseDiagramTool
 directory=/mmitss
 priority=10
-autostart=true
+autostart=false
 redirect_stderr=true          
 ;stdout_logfile=/dev/fd/1 
 stdout_logfile_maxbytes=5MB
